# cmake-exercise

./: README.md
step1/: CMakeLists.txt  tutorial.cpp
step2/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
step3/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cpp
step4/: CMakeLists.txt  TutorialConfig.h.in
step4/MathFunctions/: CMakeLists.txt
step5/: CMakeLists.txt  tutorial.cpp
step5/MathFunctions/: CMakeLists.txt  MathFunctions.h  mysqrt.cpp
